# adsum

./: Cargo.toml  README.md
.cargo/: config.toml
crates/adsum-app/: Cargo.toml
crates/adsum-app/src/: main.rs
crates/adsum-caret/: Cargo.toml
crates/adsum-caret/src/: lib.rs
crates/adsum-chatbox/: Cargo.toml
crates/adsum-chatbox/src/: lib.rs  parse.rs
crates/adsum-conversation/: Cargo.toml
crates/adsum-conversation/src/: lib.rs
crates/adsum-dashboard/: Cargo.toml
crates/adsum-dashboard/src/: conversations.rs  lib.rs  settings.rs  wikis.rs
crates/adsum-hotkey/: Cargo.toml
crates/adsum-hotkey/src/: backend.rs  lib.rs  real_backend.rs  supervisor.rs
crates/adsum-hotkey/tests/: supervisor_test.rs
crates/adsum-llm/: Cargo.toml
crates/adsum-llm/src/: agent.rs  anthropic.rs  event.rs  lib.rs  openai.rs
crates/adsum-markdown/: Cargo.toml
crates/adsum-markdown/src/: lib.rs  parse.rs  render.rs  syntax.rs
crates/adsum-markdown/tests/: markdown_test.rs
crates/adsum-settings/: Cargo.toml
crates/adsum-settings/src/: lib.rs
crates/adsum-skills/: Cargo.toml
crates/adsum-skills/skills/ingest/: SKILL.md
crates/adsum-skills/skills/query/: SKILL.md
crates/adsum-skills/src/: lib.rs  parse.rs  store.rs
crates/adsum-skills/tests/: parse_test.rs  store_test.rs
crates/adsum-state/: Cargo.toml
crates/adsum-state/src/: lib.rs  persistence.rs
crates/adsum-state/tests/: persistence_test.rs  session_test.rs  state_test.rs
crates/adsum-state/tests/fixtures/: v1_session.json
crates/adsum-tokens/: Cargo.toml
crates/adsum-tokens/src/: lib.rs
crates/adsum-tools/: Cargo.toml
crates/adsum-tools/src/: lib.rs  registry.rs  stub.rs  web_article.rs  web_fetch.rs  wiki_grep.rs  wiki_list.rs  wiki_read.rs  wiki_write.rs
crates/adsum-tools/tests/: registry_test.rs  web_fetch_test.rs  wiki_tools_test.rs
crates/adsum-ui/: Cargo.toml
crates/adsum-ui/src/: caret.rs  lib.rs
crates/adsum-wiki/: Cargo.toml
crates/adsum-wiki/src/: lib.rs
crates/adsum-wiki/tests/: wiki_test.rs
docs/superpowers/plans/: 2026-04-28-gpui-shell.md  2026-04-29-chatbox-v2-and-dashboard.md  2026-04-29-gpui-shell-rebuild.md  2026-04-30-settings-and-llm-integration.md
docs/superpowers/specs/: 2026-04-28-gpui-shell-design.md  2026-04-29-chatbox-v2-and-dashboard-design.md  2026-04-29-gpui-shell-rebuild-design.md  2026-04-30-settings-and-llm-integration-design.md
