[workspace]
resolver = "2"
members = [
    "crates/adsum-app",
    "crates/adsum-chatbox",
    "crates/adsum-conversation",
    "crates/adsum-dashboard",
    "crates/adsum-hotkey",
    "crates/adsum-llm",
    "crates/adsum-markdown",
    "crates/adsum-settings",
    "crates/adsum-state",
    "crates/adsum-tokens",
    "crates/adsum-tools",
    "crates/adsum-wiki",
]

[workspace.package]
version = "0.1.2"
edition = "2021"
license = "MIT"
publish = false

[workspace.dependencies]
# GPUI: pinned to zed main HEAD as of 2026-04-28. Bumping the pin is a deliberate workspace decision.
gpui = { git = "https://github.com/zed-industries/zed", rev = "3014170d7e4dfbe8379beda4dec92d6256b41209" }
gpui-platform = { git = "https://github.com/zed-industries/zed", rev = "3014170d7e4dfbe8379beda4dec92d6256b41209", package = "gpui_platform", features = ["font-kit"] }
global-hotkey = "0.5"
anyhow = "1"
async-trait = "0.1"
parking_lot = "0.12"
async-channel = "2"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
thiserror = "1"
tempfile = "3"
rust-embed = "8"
pulldown-cmark = "0.10"
regex          = "1"
syntect        = "5"
gh-emoji       = "1"
reqwest_client = { git = "https://github.com/zed-industries/zed", rev = "3014170d7e4dfbe8379beda4dec92d6256b41209" }
tokio              = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
reqwest            = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
futures-util       = "0.3"
eventsource-stream = "0.2"
tokio-util         = { version = "0.7", features = ["rt"] }
keyring-core               = "1"
apple-native-keyring-store = { version = "1", default-features = false, features = ["keychain"] }
