[package]
name = "adsum-app"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
adsum-state = { path = "../adsum-state" }
adsum-hotkey = { path = "../adsum-hotkey" }
gpui = { workspace = true }
gpui-platform = { workspace = true }
async-channel = { workspace = true }
env_logger = { workspace = true }
