[package]
name = "adsum-app"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
adsum-state = { path = "../adsum-state" }
adsum-hotkey = { path = "../adsum-hotkey" }
adsum-chatbox = { path = "../adsum-chatbox" }
adsum-conversation = { path = "../adsum-conversation" }
adsum-dashboard = { path = "../adsum-dashboard" }
gpui = { workspace = true }
gpui-platform = { workspace = true }
async-channel = { workspace = true }
env_logger = { workspace = true }
adsum-llm      = { path = "../adsum-llm" }
adsum-settings = { path = "../adsum-settings" }
adsum-wiki     = { path = "../adsum-wiki" }
dirs           = { workspace = true }
tokio-util     = { workspace = true }
rust-embed     = { workspace = true }
anyhow         = { workspace = true }
reqwest_client = { workspace = true }
