[package]
name = "adsum-chatbox"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
adsum-conversation = { path = "../adsum-conversation" }
adsum-state = { path = "../adsum-state" }
adsum-tokens = { path = "../adsum-tokens" }
gpui = { workspace = true }
