[package]
name = "adsum-chatbox"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
adsum-conversation = { path = "../adsum-conversation" }
adsum-state = { path = "../adsum-state" }
adsum-tokens = { path = "../adsum-tokens" }
adsum-ui     = { path = "../adsum-ui" }
gpui = { workspace = true }
adsum-llm      = { path = "../adsum-llm" }
adsum-settings = { path = "../adsum-settings" }
adsum-skills   = { path = "../adsum-skills" }
async-channel  = { workspace = true }
tokio-util     = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
