[package]
name = "adsum-conversation"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
adsum-state = { path = "../adsum-state" }
adsum-tokens = { path = "../adsum-tokens" }
gpui = { workspace = true }
adsum-markdown = { path = "../adsum-markdown" }
serde_json = { workspace = true }
