[package]
name = "adsum-dashboard"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
adsum-state = { path = "../adsum-state" }
adsum-tokens = { path = "../adsum-tokens" }
adsum-caret    = { path = "../adsum-caret" }
adsum-llm      = { path = "../adsum-llm" }
adsum-settings = { path = "../adsum-settings" }
adsum-wiki     = { path = "../adsum-wiki" }
adsum-markdown = { path = "../adsum-markdown" }
gpui = { workspace = true }
serde_json = { workspace = true }
