[package]
name = "adsum-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
adsum-state        = { path = "../adsum-state" }
adsum-settings     = { path = "../adsum-settings" }
async-channel      = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
tokio              = { workspace = true }
tokio-util         = { workspace = true }
reqwest            = { workspace = true }
futures-util       = { workspace = true }
eventsource-stream = { workspace = true }
