[package]
name = "adsum-settings"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
dirs       = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
