[package]
name = "adsum-skills"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
serde       = { workspace = true }
serde_yaml  = { workspace = true }
thiserror   = { workspace = true }
dirs        = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
