[package]
name = "adsum-state"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
dirs = { workspace = true }
adsum-settings = { path = "../adsum-settings" }

[dev-dependencies]
tempfile = { workspace = true }
