[package]
name = "adsum-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
adsum-wiki  = { path = "../adsum-wiki" }
async-trait = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
reqwest     = { workspace = true }
tokio       = { workspace = true }
regex       = { workspace = true }
readabilityrs = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
